--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 
 @layer base {
     body {
-        @apply bg-gray-200 font-custom text-base text-gray-500
+        @apply font-custom text-base text-gray-500;
+        background-color: hsl(225deg 100% 94%);
+        background-image: url('./src/assets/pattern-background-mobile.svg');
+        background-repeat: no-repeat;
+        background-size: contain;
     }
 }
